<resources>
    <string name="app_name">BMS</string>
    <string name="bms">Business Management System</string>
    <string name="bms_splash">Sale Order Booking</string>
    <string name="order_booking">ORDER BOOKING</string>
    <string name="stock">STOCK</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="import_data">IMPORT</string>
    <string name="export">EXPORT </string>
    <string name="welcome">Welcome!</string>
    <string name="admin">admin</string>
    <string name="password">admin</string>
    <string name="login">Login</string>
    <string name="export_main">Export the below details</string>
    <string name="export_all">EXPORT ALL</string>
    <string name="send_all">SEND ALL</string>
    <string name="clear">CLEAR</string>
    <string name="import_main">Import the  below details</string>
    <string name="import_customer">IMPORT CUSTOMER</string>
    <string name="import_group">IMPORT GROUP</string>
    <string name="import_stock">IMPORT STOCK</string>
    <string name="select_manufacturer">Select Manufacturer</string>
    <string name="new_order">New Order</string>
    <string name="pending_order">Pending Order</string>
    <string name="save_order">save order</string>
    <string name="cancel">cancel</string>
    <string name="add_item">add item</string>
    <string name="choose_customer">Choose Customer From List</string>
    <string name="phoneNumber">PhoneNumber :</string>
    <string name="balance">Balance :</string>
    <string name="stock_list">Stock List</string>
    <string name="name">Name</string>
    <string name="mrp">MRP</string>
    <string name="rate">Rate</string>
    <string name="uom">UOM </string>
    <string name="selected_product_name">Selected Product Name</string>
    <string name="search">search</string>
    <string name="update_cart">UPDATE CART</string>
    <string name="primary_batch">Primary Batch</string>
    <string name="qty">Oty</string>
    <string name="total_quantity">TotalQuantity</string>
    <string name="free_quantity">FreeQuantity</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax(VAT%)</string>
    <string name="no">No</string>
    <string name="item">Item</string>
    <string name="description">Deascription</string>
    <string name="brand">Brand</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="previous_order">Previous Orders</string>
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
</resources>
