<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ececec">




        <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal"
                    tools:ignore="MissingConstraints">

                    <android.widget.Button
                        android:id="@+id/openNav"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/nav_bar" />

                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="Import"
                        android:textAllCaps="true"
                        android:textColor="#FFF"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>


        <Button
            android:id="@+id/imt_group_btn"
            android:layout_width="373dp"
            android:layout_height="68dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/import_group"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/import_textview"
            app:layout_constraintVertical_bias="0.219" />

        <Button
            android:id="@+id/imt_stock_btn"
            android:layout_width="373dp"
            android:layout_height="68dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/import_stock"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/import_textview"
            app:layout_constraintVertical_bias="0.397" />

        <TextView
            android:id="@+id/import_textview"
            android:layout_width="367dp"
            android:layout_height="67dp"
            android:padding="20dp"
            android:text="@string/import_main"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/imt_customer_btn"
            android:layout_width="373dp"
            android:layout_height="68dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/import_customer"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/import_textview"
            app:layout_constraintVertical_bias="0.043" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/clear"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.913"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_all_btn"
            app:layout_constraintVertical_bias="0.968"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:elevation="20dp"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>