<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:context=".HomeScreenActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <android.widget.Button
                android:id="@+id/openNav"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:background="@drawable/nav_bar" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="Dashboard"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="226dp"
            android:layout_height="68dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057"
            app:srcCompat="@drawable/circle"
            tools:srcCompat="@drawable/circle"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="TextView"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="32dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="353dp"
            android:layout_height="352dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="11dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/order_booking_btn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_border"
                android:text="@string/order_booking"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/stock_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:text="@string/stock"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/order_summary_btn"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:text="@string/order_summary"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/import_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:text="@string/import_data"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/export_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:text="@string/export"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:elevation="20dp"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>